--- a/app/globals.css
+++ b/app/globals.css
@@ -1,17 +1,14 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #f9fafb;
   --foreground: #171717;
-   --border-color: #e5e7eb; 
+  
    
 
 }
 
 
-* {
-  border-color: var(--border-color);
-}
 
 @theme inline {
   --color-background: var(--background);
@@ -31,8 +28,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-  border:#e5e7eb;
-  text:#425466
+
 }
 
 @theme inline {
