final aurora fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,15 @@
   --aurora: none;
   --dark-gradient: none;
   --white-gradient: none;
+   --tw-blur: ;
+  --tw-brightness: ;
+  --tw-contrast: ;
+  --tw-grayscale: ;
+  --tw-hue-rotate: ;
+  --tw-invert: ;
+  --tw-saturate: ;
+  --tw-sepia: ;
+  --tw-drop-shadow: ;
   
    }
 
